project section mobile fix

--- a/painting-service.html
+++ b/painting-service.html
@@ -1941,7 +1941,7 @@
               class="w-full"
             />
           </div>
-          <div class="col-span-2 w-full cursor-pointer">
+          <div class="md:col-span-2 w-full cursor-pointer">
             <img
               src="./asset/img/flooring_project_img3.png"
               alt="Project Image"
