--- a/wall-partition-ceiling-services.html
+++ b/wall-partition-ceiling-services.html
@@ -1921,7 +1921,7 @@
               class="w-full"
             />
           </div>
-          <div class="col-span-2 w-full cursor-pointer">
+          <div class="md:col-span-2 w-full cursor-pointer">
             <img
               src="./asset/img/flooring_project_img3.png"
               alt="Project Image"
