project page done

--- a/projects.html
+++ b/projects.html
@@ -275,10 +275,10 @@
                   common things in all our projects. So we proudly welcome you
                   to see more.
                 </p>
-                <div class="text-center md:flex md:gap-2 my-[10.93vw] md:my-0">
-                  <a href="#">All</a>
-                  <a href="#">Residential</a>
-                  <a href="#">Commercial</a>
+                <div class="text-center md:flex md:gap-4 my-[10.93vw] md:my-0">
+                  <a href="#" class="border-b-2 border-black">All</a>
+                  <a href="#" class="text-[#6e6e6e]">Residential</a>
+                  <a href="#" class="text-[#6e6e6e]">Commercial</a>
                 </div>
               </div>
             </div>
@@ -294,14 +294,14 @@
       <!-- here ended the hero section  -->
 
       <!-- project section here start  -->
-      <div class="w-full bg-black" id="projects">
+      <div class="w-full" id="projects">
         <div
-          class="grid grid-cols-1 md:grid-cols-2 gap-4 justify-center items-center px-[2.083vw] py"
+          class="grid grid-cols-1 md:grid-cols-2 gap-4 justify-center items-center"
         >
-          <div class="w-full cursor-pointer relative outer-div">
+          <div class="w-full cursor-pointer relative outer-div md:col-span-2">
             <div class="overlay"></div>
             <img
-              src="./asset/img/flooring_project_img1.png"
+              src="./asset/img/project_img1.png"
               alt="Allurei Manson SG"
               class="w-full"
             />
@@ -333,14 +333,36 @@
           </div>
           <div class="w-full cursor-pointer">
             <img
-              src="./asset/img/flooring_project_img2.png"
+              src="./asset/img/project_img2.png"
+              alt="Project Image"
+              class="w-full"
+            />
+          </div>
+          <div class="w-full cursor-pointer">
+            <img
+              src="./asset/img/project_img3.png"
               alt="Project Image"
               class="w-full"
             />
           </div>
           <div class="md:col-span-2 w-full cursor-pointer">
             <img
-              src="./asset/img/flooring_project_img3.png"
+              src="./asset/img/project_img4.png"
+              alt="Project Image"
+              class="w-full"
+            />
+          </div>
+
+          <div class="w-full cursor-pointer">
+            <img
+              src="./asset/img/project_img2.png"
+              alt="Project Image"
+              class="w-full"
+            />
+          </div>
+          <div class="w-full cursor-pointer">
+            <img
+              src="./asset/img/project_img3.png"
               alt="Project Image"
               class="w-full"
             />
