project section mobile version fix

--- a/demolition-services.html
+++ b/demolition-services.html
@@ -1865,13 +1865,17 @@
 
       <!-- project section here start  -->
       <div class="w-full bg-black" id="projects">
-        <div class="overflow-hidden text-center py-[8.594vw] px-[30.208vw]">
+        <div
+          class="overflow-hidden text-center py-[8.594vw] px-[10vw] md:px-[30.208vw]"
+        >
           <h2
-            class="text-[5vw] md:text-[2.292vw] text-[#EEECE8] font-bold mb-4 leading-[4vw] md:leading-[2.7vw]"
+            class="text-[8.372vw] md:text-[2.292vw] text-[#EEECE8] mb-4 leading-[12.056vw] md:leading-[2.7vw]"
           >
             OUR PROJECTS
           </h2>
-          <p class="mb-8 text-[#EEECE8]">
+          <p
+            class="mb-8 text-[#EEECE8] text-[4.186vw] md:text-[0.938vw] leading-[6.512vw] md:leading-[1.458vw]"
+          >
             We released more than 150 commercial and private projects all around
             the world, providing our clients with custom solutions in stylish,
             functional, and well-thought-out designs.
