--- a/projects.html
+++ b/projects.html
@@ -294,9 +294,9 @@
       <!-- here ended the hero section  -->
 
       <!-- project section here start  -->
-      <div class="w-full" id="projects">
+      <div class="w-full bg-[#EEECE8]" id="projects">
         <div
-          class="grid grid-cols-1 md:grid-cols-2 gap-4 justify-center items-center"
+          class="grid grid-cols-1 md:grid-cols-2 gap-4 justify-center items-center px-[5vw] md:px-0"
         >
           <div class="w-full cursor-pointer relative outer-div md:col-span-2">
             <div class="overlay"></div>
