--- a/testimonial.html
+++ b/testimonial.html
@@ -248,134 +248,37 @@
 
       <!-- here started the hero section  -->
       <section
-        class="hero border-[#BEB8AE] bg-[#EEECE8] w-full border-b-[0.1rem] pt-[13.953vw] md:pt-[5.505vw]"
+        class="hero border-[#BEB8AE] bg-[#EEECE8] w-full border-b-[0.1rem]"
       >
         <div
-          class="aspect-[430/450] md:aspect-[1720/702] container-exceptional"
+          class="aspect-[430/450] md:aspect-[1720/702] container-general flex flex-col justify-center items-center"
         >
           <div
-            class="flex flex-col md:flex-row md:h-full md:w-full justify-center md:justify-between"
+            class="w-full md:w-full flex flex-col justify-center items-center pt-10"
           >
-            <div
-              class="w-full aspect-[430/438] md:h-full flex justify-center items-center md:hidden"
+            <h1
+              class="text-[7vw] md:text-[3vw] text-center leading-[8.372vw] md:leading-[3vw] text-[#FF6D43] pt-[13.953vw] md:pt-0 mx-[10vw] md:mx-0"
             >
-              <div class="project-hero-img-mobile w-full h-full"></div>
-            </div>
-            <div
-              class="w-full md:w-[35%] flex justify-center md:justify-end items-center -mt-[18.605vw] md:mt-0"
+              Testimonial
+            </h1>
+            <p
+              class="text-[4.186vw] md:text-[0.938vw] text-center my-[10vw] md:my-[2.656vw] text-[#291E18CC] px-[10vw] md:px-[9.791vw]"
             >
-              <div class="w-full md:w-[37.6875rem]">
-                <h1
-                  class="text-[6.512vw] md:text-[2.5vw] text-center md:text-start leading-[8.372vw] md:leading-[3vw] text-[#291E18] pt-[13.953vw] md:pt-0 mx-[10vw] md:mx-0"
-                >
-                  Our<span class="text-[#FF6D43]"> Projects</span>
-                </h1>
-                <p
-                  class="text-[4.186vw] md:text-[0.938vw] text-center md:text-start my-[10vw] md:my-[2.656vw] text-[#291E18CC] mx-[10vw] md:mx-0"
-                >
-                  Years of creating gave us an opportunity to show you a
-                  portfolio of more than 150 projects of different sizes, types,
-                  and locations. Attention to details, modern solutions, and
-                  thinking outside the box to make something special — are
-                  common things in all our projects. So we proudly welcome you
-                  to see more.
-                </p>
-                <div class="text-center md:flex md:gap-4 my-[10.93vw] md:my-0">
-                  <a href="#" class="border-b-2 border-black">All</a>
-                  <a href="#" class="text-[#6e6e6e]">Residential</a>
-                  <a href="#" class="text-[#6e6e6e]">Commercial</a>
-                </div>
-              </div>
-            </div>
-            <div
-              class="w-full aspect-[430/438] md:h-full md:flex md:w-[63%] justify-end items-center hidden"
-            >
-              <!-- <img class="" src="/asset/img/3d floor plan 3.png" alt="" srcset="" /> -->
-              <div class="project-hero-img w-full h-full"></div>
+              Years of creating gave us an opportunity to show you a portfolio
+              of more than 150 projects of different sizes, types, and
+              locations. Attention to details, modern solutions, and thinking
+              outside the box to make something special — are common things in
+              all our projects. So we proudly welcome you to see more.
+            </p>
+            <div class="text-center md:flex md:gap-4 my-[10.93vw] md:my-0">
+              <a href="#" class="border-b-2 border-black">All</a>
+              <a href="#" class="text-[#6e6e6e]">Residential</a>
+              <a href="#" class="text-[#6e6e6e]">Commercial</a>
             </div>
           </div>
         </div>
       </section>
       <!-- here ended the hero section  -->
-
-      <!-- project section here start  -->
-      <div class="w-full bg-[#EEECE8]" id="projects">
-        <div
-          class="grid grid-cols-1 md:grid-cols-2 gap-4 justify-center items-center px-[5vw] md:px-0"
-        >
-          <div class="w-full cursor-pointer relative outer-div md:col-span-2">
-            <div class="overlay"></div>
-            <img
-              src="./asset/img/project_img1.png"
-              alt="Allurei Manson SG"
-              class="w-full"
-            />
-            <div class="absolute bottom-10 left-10 md:opacity-0 inner-div">
-              <p
-                class="text-[5vw] md:text-[2.292vw] text-[#fff] leading-[4vw] md:leading-[2.7vw]"
-              >
-                Allurei Manson SG
-              </p>
-              <div class="flex items-center gap-[3.256vw] md:gap-[0.833vw]">
-                <p
-                  class="text-[2.326vw] md:text-[0.677vw] font-normal md:leading-4 leading-[3.721vw] tracking-normal text-left text-[#fff]"
-                >
-                  Midney State 7440
-                </p>
-
-                <img
-                  class="img-fluid"
-                  src="./asset/img/date_pointer_bg.png"
-                  alt="date_pointer_bg"
-                />
-                <p
-                  class="text-[2.326vw] md:text-[0.677vw] font-normal md:leading-4 leading-[3.721vw] tracking-normal text-left text-[#EEECE8]"
-                >
-                  24 December 2023
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="w-full cursor-pointer">
-            <img
-              src="./asset/img/project_img2.png"
-              alt="Project Image"
-              class="w-full"
-            />
-          </div>
-          <div class="w-full cursor-pointer">
-            <img
-              src="./asset/img/project_img3.png"
-              alt="Project Image"
-              class="w-full"
-            />
-          </div>
-          <div class="md:col-span-2 w-full cursor-pointer">
-            <img
-              src="./asset/img/project_img4.png"
-              alt="Project Image"
-              class="w-full"
-            />
-          </div>
-
-          <div class="w-full cursor-pointer">
-            <img
-              src="./asset/img/project_img2.png"
-              alt="Project Image"
-              class="w-full"
-            />
-          </div>
-          <div class="w-full cursor-pointer">
-            <img
-              src="./asset/img/project_img3.png"
-              alt="Project Image"
-              class="w-full"
-            />
-          </div>
-        </div>
-      </div>
-
-      <!-- project section here end -->
 
       <!-- google review section start -->
       <div class="w-full bg-[#EEECE8] border-[#BEB8AE] border-b-[0.1rem]">
