--- a/testimonial.html
+++ b/testimonial.html
@@ -103,7 +103,7 @@
                 <a class="text-[#291E18] text-[0.833vw]" href="#">About</a>
               </li>
               <li class="cursor-pointer">
-                <a class="text-[#291E18] text-[0.833vw]" href="#"
+                <a class="text-[#291E18] text-[0.833vw]" href="testimonial.html"
                   >Testimonial</a
                 >
               </li>
@@ -236,8 +236,8 @@
                 </div>
               </li>
               <li><a class="py-3" href="#">About</a></li>
-              <li><a class="py-3" href="#">Testimonial</a></li>
-              <li><a class="py-3" href="#">Projects</a></li>
+              <li><a class="py-3" href="testimonial.html">Testimonial</a></li>
+              <li><a class="py-3" href="projects.html">Projects</a></li>
             </ul>
           </div>
           <!-- here ended the content  -->
@@ -1873,6 +1873,11 @@
                   <i class="fa-solid fa-star text-[#FF6D43]"></i>
                   <i class="fa-solid fa-star text-[#FF6D43]"></i>
                 </div>
+                <img
+                  class="w-[1.25vw] aspect-[1/1] hidden md:block"
+                  src="./asset/img/appostopic_coma.png"
+                  alt="coma"
+                />
               </div>
 
               <div class="flex flex-col gap-8">
@@ -1918,6 +1923,11 @@
                   <i class="fa-solid fa-star text-[#FF6D43]"></i>
                   <i class="fa-solid fa-star text-[#FF6D43]"></i>
                 </div>
+                <img
+                  class="w-[1.25vw] aspect-[1/1] hidden md:block"
+                  src="./asset/img/appostopic_coma.png"
+                  alt="coma"
+                />
               </div>
 
               <div class="flex flex-col gap-8">
@@ -1963,6 +1973,11 @@
                   <i class="fa-solid fa-star text-[#FF6D43]"></i>
                   <i class="fa-solid fa-star text-[#FF6D43]"></i>
                 </div>
+                <img
+                  class="w-[1.25vw] aspect-[1/1] hidden md:block"
+                  src="./asset/img/appostopic_coma.png"
+                  alt="coma"
+                />
               </div>
 
               <div class="flex flex-col gap-8">
@@ -2008,6 +2023,11 @@
                   <i class="fa-solid fa-star text-[#FF6D43]"></i>
                   <i class="fa-solid fa-star text-[#FF6D43]"></i>
                 </div>
+                <img
+                  class="w-[1.25vw] aspect-[1/1] hidden md:block"
+                  src="./asset/img/appostopic_coma.png"
+                  alt="coma"
+                />
               </div>
 
               <div class="flex flex-col gap-8">
@@ -2053,6 +2073,11 @@
                   <i class="fa-solid fa-star text-[#FF6D43]"></i>
                   <i class="fa-solid fa-star text-[#FF6D43]"></i>
                 </div>
+                <img
+                  class="w-[1.25vw] aspect-[1/1] hidden md:block"
+                  src="./asset/img/appostopic_coma.png"
+                  alt="coma"
+                />
               </div>
 
               <div class="flex flex-col gap-8">
@@ -2098,6 +2123,11 @@
                   <i class="fa-solid fa-star text-[#FF6D43]"></i>
                   <i class="fa-solid fa-star text-[#FF6D43]"></i>
                 </div>
+                <img
+                  class="w-[1.25vw] aspect-[1/1] hidden md:block"
+                  src="./asset/img/appostopic_coma.png"
+                  alt="coma"
+                />
               </div>
 
               <div class="flex flex-col gap-8">
@@ -2143,6 +2173,11 @@
                   <i class="fa-solid fa-star text-[#FF6D43]"></i>
                   <i class="fa-solid fa-star text-[#FF6D43]"></i>
                 </div>
+                <img
+                  class="w-[1.25vw] aspect-[1/1] hidden md:block"
+                  src="./asset/img/appostopic_coma.png"
+                  alt="coma"
+                />
               </div>
 
               <div class="flex flex-col gap-8">
@@ -2188,6 +2223,11 @@
                   <i class="fa-solid fa-star text-[#FF6D43]"></i>
                   <i class="fa-solid fa-star text-[#FF6D43]"></i>
                 </div>
+                <img
+                  class="w-[1.25vw] aspect-[1/1] hidden md:block"
+                  src="./asset/img/appostopic_coma.png"
+                  alt="coma"
+                />
               </div>
 
               <div class="flex flex-col gap-8">
@@ -2233,6 +2273,11 @@
                   <i class="fa-solid fa-star text-[#FF6D43]"></i>
                   <i class="fa-solid fa-star text-[#FF6D43]"></i>
                 </div>
+                <img
+                  class="w-[1.25vw] aspect-[1/1] hidden md:block"
+                  src="./asset/img/appostopic_coma.png"
+                  alt="coma"
+                />
               </div>
 
               <div class="flex flex-col gap-8">
@@ -2264,6 +2309,12 @@
             </div>
             <!-- here ended the testimonial single slider  -->
           </div>
+
+          <p
+            class="text-[4vw] md:text-[1.875vw] leading-[2vw] md:leading-[0.833vw] text-[#291E18] text-center pt-[5vw] cursor-pointer"
+          >
+            See more...
+          </p>
         </div>
       </section>
       <!-- Testimonial section end here  -->
