--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <a class="text-[#291E18] text-[0.833vw]" href="#">About</a>
               </li>
               <li class="cursor-pointer">
-                <a class="text-[#291E18] text-[0.833vw]" href="#"
+                <a class="text-[#291E18] text-[0.833vw]" href="testimonial.html"
                   >Testimonial</a
                 >
               </li>
@@ -236,8 +236,8 @@
                 </div>
               </li>
               <li><a class="py-3" href="#">About</a></li>
-              <li><a class="py-3" href="#">Testimonial</a></li>
-              <li><a class="py-3" href="#">Projects</a></li>
+              <li><a class="py-3" href="testimonial.html">Testimonial</a></li>
+              <li><a class="py-3" href="projects.html">Projects</a></li>
             </ul>
           </div>
           <!-- here ended the content  -->
@@ -3122,7 +3122,7 @@
               class="flex flex-col-reverse md:flex-row gap-[6.047vw] md:gap-[2.3vw] justify-center items-center border-b-[0.1px] border-[#BEB8AE] pb-[15vw] md:pb-[4.167vw]"
             >
               <img
-                class="img-fluid mx-[10vw] md:mx-0"
+                class="px-[10vw] md:px-0"
                 src="./asset/img/blog_img1.png"
                 alt="blog image"
               />
@@ -3142,7 +3142,6 @@
                 </p>
                 <div class="flex items-center gap-[3.256vw] md:gap-[0.833vw]">
                   <img
-                    class="img-fluid"
                     src="./asset/img/date_pointer_bg.png"
                     alt="date_pointer_bg"
                   />
@@ -3159,7 +3158,7 @@
               class="flex flex-col-reverse md:flex-row gap-[6.047vw] md:gap-[2.3vw] justify-center items-center pt-[13.5vw] md:pt-[4.167vw]"
             >
               <img
-                class="img-fluid mx-[10vw] md:mx-0"
+                class="px-[10vw] md:px-0"
                 src="./asset/img/blog_img2.png"
                 alt="blog image"
               />
