--- a/wall-partition-ceiling-services.html
+++ b/wall-partition-ceiling-services.html
@@ -103,7 +103,7 @@
                 <a class="text-[#291E18] text-[0.833vw]" href="#">About</a>
               </li>
               <li class="cursor-pointer">
-                <a class="text-[#291E18] text-[0.833vw]" href="#"
+                <a class="text-[#291E18] text-[0.833vw]" href="testimonial.html"
                   >Testimonial</a
                 >
               </li>
@@ -236,8 +236,8 @@
                 </div>
               </li>
               <li><a class="py-3" href="#">About</a></li>
-              <li><a class="py-3" href="#">Testimonial</a></li>
-              <li><a class="py-3" href="#">Projects</a></li>
+              <li><a class="py-3" href="testimonial.html">Testimonial</a></li>
+              <li><a class="py-3" href="projects.html">Projects</a></li>
             </ul>
           </div>
           <!-- here ended the content  -->
