service hero section fix

--- a/demolition-services.html
+++ b/demolition-services.html
@@ -251,9 +251,9 @@
         class="hero border-[#BEB8AE] bg-[#EEECE8] w-full border-b-[0.1rem] pt-12 md:pt-0"
       >
         <div class="aspect-[430/450] md:aspect-[1920/800] w-full">
-          <div class="hero-img w-full h-full relative">
+          <div class="w-full h-full relative overflow-hidden">
             <img
-              class="w-full h-full"
+              class="w-full h-auto"
               src="./asset/img/demolation_service_img.jpg"
               alt="flooring-services"
             />
@@ -263,7 +263,7 @@
             ></div>
 
             <div
-              class="w-full h-full overlay-bg-radial top-0 bottom-0 left-0 right-0 absolute z-10 block md:hidden"
+              class="w-full h-full overlay-bg-dark top-0 bottom-0 left-0 right-0 absolute z-10 block md:hidden"
             ></div>
 
             <!-- Content -->
@@ -1872,7 +1872,7 @@
       <!-- project section here start  -->
       <div class="w-full bg-black" id="projects">
         <div
-          class="overflow-hidden text-center py-[8.594vw] px-[10vw] md:px-[30.208vw]"
+          class="overflow-hidden text-center pb-[8vw] pt-[6vw] px-[10vw] md:px-[30.208vw]"
         >
           <h2
             class="text-[8.372vw] md:text-[2.292vw] text-[#EEECE8] mb-4 leading-[12.056vw] md:leading-[2.7vw]"
