--- a/painting-service.html
+++ b/painting-service.html
@@ -1886,7 +1886,7 @@
       <!-- project section here start  -->
       <div class="w-full bg-black" id="projects">
         <div
-          class="overflow-hidden text-center py-[8.594vw] px-[10vw] md:px-[30.208vw]"
+          class="overflow-hidden text-center pb-[8vw] pt-[6vw] px-[10vw] md:px-[30.208vw]"
         >
           <h2
             class="text-[8.372vw] md:text-[2.292vw] text-[#EEECE8] mb-4 leading-[12.056vw] md:leading-[2.7vw]"
