hero section mobile fix

--- a/masonary-services.html
+++ b/masonary-services.html
@@ -253,7 +253,7 @@
         <div class="aspect-[430/450] md:aspect-[1900/800] w-full">
           <div class="w-full h-full relative overflow-hidden">
             <img
-              class="w-full h-auto"
+              class="w-full h-full md:h-auto"
               src="./asset/img/masonary_service_img.jpg"
               alt="flooring-services"
             />
