--- a/demolition-services.html
+++ b/demolition-services.html
@@ -253,7 +253,7 @@
         <div class="aspect-[430/450] md:aspect-[1920/800] w-full">
           <div class="w-full h-full relative overflow-hidden">
             <img
-              class="w-full h-auto"
+              class="w-full h-full md:h-auto"
               src="./asset/img/demolation_service_img.jpg"
               alt="flooring-services"
             />
