testimoial mobile version fix

--- a/testimonial.html
+++ b/testimonial.html
@@ -1882,7 +1882,7 @@
 
               <div class="flex flex-col gap-8">
                 <p
-                  class="md:text-[1.042vw] font-normal leading-[6.512vw] md:leading-[1.458vw] tracking-normal text-left text-[#291E18]"
+                  class="md:text-[1.042vw] leading-[6.512vw] md:leading-[1.458vw] text-center md:text-left text-[#291E18]"
                 >
                   Thank you Araf and team for completing painting of my kids
                   bedroom including feature walls and master bedroom within 2
@@ -1932,7 +1932,7 @@
 
               <div class="flex flex-col gap-8">
                 <p
-                  class="md:text-[1.042vw] font-normal leading-[6.512vw] md:leading-[1.458vw] tracking-normal text-left text-[#291E18]"
+                  class="md:text-[1.042vw] leading-[6.512vw] md:leading-[1.458vw] text-center md:text-left text-[#291E18]"
                 >
                   Thank you Araf and team for completing painting of my kids
                   bedroom including feature walls and master bedroom within 2
@@ -1982,7 +1982,7 @@
 
               <div class="flex flex-col gap-8">
                 <p
-                  class="md:text-[1.042vw] font-normal leading-[6.512vw] md:leading-[1.458vw] tracking-normal text-left text-[#291E18]"
+                  class="md:text-[1.042vw] leading-[6.512vw] md:leading-[1.458vw] text-center md:text-left text-[#291E18]"
                 >
                   Thank you Araf and team for completing painting of my kids
                   bedroom including feature walls and master bedroom within 2
@@ -2032,7 +2032,7 @@
 
               <div class="flex flex-col gap-8">
                 <p
-                  class="md:text-[1.042vw] font-normal leading-[6.512vw] md:leading-[1.458vw] tracking-normal text-left text-[#291E18]"
+                  class="md:text-[1.042vw] leading-[6.512vw] md:leading-[1.458vw] text-center md:text-left text-[#291E18]"
                 >
                   Thank you Araf and team for completing painting of my kids
                   bedroom including feature walls and master bedroom within 2
@@ -2082,7 +2082,7 @@
 
               <div class="flex flex-col gap-8">
                 <p
-                  class="md:text-[1.042vw] font-normal leading-[6.512vw] md:leading-[1.458vw] tracking-normal text-left text-[#291E18]"
+                  class="md:text-[1.042vw] leading-[6.512vw] md:leading-[1.458vw] text-center md:text-left text-[#291E18]"
                 >
                   Thank you Araf and team for completing painting of my kids
                   bedroom including feature walls and master bedroom within 2
@@ -2132,7 +2132,7 @@
 
               <div class="flex flex-col gap-8">
                 <p
-                  class="md:text-[1.042vw] font-normal leading-[6.512vw] md:leading-[1.458vw] tracking-normal text-left text-[#291E18]"
+                  class="md:text-[1.042vw] leading-[6.512vw] md:leading-[1.458vw] text-center md:text-left text-[#291E18]"
                 >
                   Thank you Araf and team for completing painting of my kids
                   bedroom including feature walls and master bedroom within 2
@@ -2182,7 +2182,7 @@
 
               <div class="flex flex-col gap-8">
                 <p
-                  class="md:text-[1.042vw] font-normal leading-[6.512vw] md:leading-[1.458vw] tracking-normal text-left text-[#291E18]"
+                  class="md:text-[1.042vw] leading-[6.512vw] md:leading-[1.458vw] text-center md:text-left text-[#291E18]"
                 >
                   Thank you Araf and team for completing painting of my kids
                   bedroom including feature walls and master bedroom within 2
@@ -2232,7 +2232,7 @@
 
               <div class="flex flex-col gap-8">
                 <p
-                  class="md:text-[1.042vw] font-normal leading-[6.512vw] md:leading-[1.458vw] tracking-normal text-left text-[#291E18]"
+                  class="md:text-[1.042vw] leading-[6.512vw] md:leading-[1.458vw] text-center md:text-left text-[#291E18]"
                 >
                   Thank you Araf and team for completing painting of my kids
                   bedroom including feature walls and master bedroom within 2
@@ -2282,7 +2282,7 @@
 
               <div class="flex flex-col gap-8">
                 <p
-                  class="md:text-[1.042vw] font-normal leading-[6.512vw] md:leading-[1.458vw] tracking-normal text-left text-[#291E18]"
+                  class="md:text-[1.042vw] leading-[6.512vw] md:leading-[1.458vw] text-center md:text-left text-[#291E18]"
                 >
                   Thank you Araf and team for completing painting of my kids
                   bedroom including feature walls and master bedroom within 2
